<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UpcomingFragment"
    >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraint_upcoming_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints"
        android:elevation="2dp"
        android:translationZ="2dp"
        android:background="@drawable/round_drawable"
        android:padding="20dp"
        android:layout_margin="10dp"
        >

        <ImageView
            android:id="@+id/upcoming_launch_card_image"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:paddingEnd="20dp"
            android:paddingTop="13dp"
            android:scaleType="fitCenter"
            android:src="@drawable/crs"
            app:layout_constraintBottom_toBottomOf="@+id/upcoming_launch_card_dateview"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/upcoming_launch_card_text_view" />

        <TextView
            android:id="@+id/upcoming_launch_card_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/red"
            android:fontFamily="@font/google_sans_regular"
            android:textSize="11sp"
            android:paddingBottom="7dp"
            android:textStyle="bold"
            android:text="@string/launch"
            app:layout_constraintStart_toEndOf="@+id/upcoming_launch_card_image"
            tools:layout_editor_absoluteX="95dp" />

        <TextView
            android:id="@+id/upcoming_launch_card_starlink_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:fontFamily="@font/google_sans_regular"
            android:textSize="18sp"
            android:paddingBottom="7dp"
            android:text="@string/starlink_2"
            app:layout_constraintStart_toEndOf="@+id/upcoming_launch_card_image"
            app:layout_constraintTop_toBottomOf="@+id/upcoming_launch_card_text_view" />

        <TextView
            android:id="@+id/upcoming_launch_card_ccaes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/google_sans_regular"
            android:textSize="12sp"
            android:text="@string/CCAES_SLC_40"
            android:textColor="@color/gray"
            android:textStyle="bold"
            android:paddingBottom="7dp"
            app:layout_constraintStart_toEndOf="@+id/upcoming_launch_card_image"
            app:layout_constraintTop_toBottomOf="@+id/upcoming_launch_card_starlink_2" />

        <TextView
            android:id="@+id/upcoming_launch_card_dateview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/google_sans_regular"
            android:textColor="@color/gray"
            android:text="@string/date"
            android:textSize="12sp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/upcoming_launch_card_image"
            app:layout_constraintTop_toBottomOf="@+id/upcoming_launch_card_ccaes" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/google_sans_regular"
        android:paddingTop="40dp"
        android:text="@string/launch_date"
        android:textColor="@color/red"
        android:textSize="12dp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/constraint_upcoming_card"
        app:layout_constraintTop_toBottomOf="@+id/constraint_upcoming_card"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/launch_date_text"
        android:paddingTop="13dp"
        android:textColor="@color/black"
        android:fontFamily="@font/google_sans_regular"
        android:textStyle="bold"
        android:textSize="18dp"
        app:layout_constraintStart_toStartOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/launch_site"
        android:textColor="@color/red"
        android:fontFamily="@font/google_sans_regular"
        android:textStyle="bold"
        android:paddingTop="13dp"
        android:textSize="12dp"
        app:layout_constraintStart_toStartOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/launch_site_text"
        android:paddingTop="13dp"
        android:textColor="@color/black"
        android:fontFamily="@font/google_sans_regular"
        android:textStyle="bold"
        android:textSize="18dp"
        app:layout_constraintStart_toStartOf="@+id/textView3"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/count_down"
        android:textColor="@color/red"
        android:fontFamily="@font/google_sans_regular"
        android:textStyle="bold"
        android:paddingTop="13dp"
        android:textSize="12dp"
        app:layout_constraintStart_toStartOf="@+id/textView4"
        app:layout_constraintTop_toBottomOf="@+id/textView4"
        tools:ignore="MissingConstraints" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/count_down_text"
        android:paddingTop="13dp"
        android:textColor="@color/black"
        android:fontFamily="@font/google_sans_regular"
        android:textStyle="bold"
        android:textSize="18dp"
        app:layout_constraintStart_toStartOf="@+id/textView5"
        app:layout_constraintTop_toBottomOf="@+id/textView5"
        tools:ignore="MissingConstraints" />


</androidx.constraintlayout.widget.ConstraintLayout>