<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:elevation="2dp"
    android:translationZ="2dp"
    android:background="@drawable/round_drawable"
    android:padding="20dp"
    android:layout_marginStart="10dp"
    android:layout_marginEnd="10dp"
    android:layout_marginBottom="10dp"
    android:layout_marginTop="5dp">

    <ImageView
        android:id="@+id/launches_image_item"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:scaleType="fitCenter"
        android:adjustViewBounds="true"
        android:paddingRight="30dp"
        android:paddingTop="5dp"
        android:src="@drawable/crs"
        app:layout_constraintBottom_toBottomOf="@+id/launches_launch_date_text_view"
        app:layout_constraintTop_toTopOf="@+id/launches_launch_text_view"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="15dp" />

    <TextView
        android:id="@+id/launches_launch_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:fontFamily="@font/google_sans_regular"
        android:paddingBottom="5dp"
        android:textStyle="bold"
        android:text="@string/launch"
        android:textColor="@color/red"
        android:textSize="11dp"
        app:layout_constraintStart_toEndOf="@+id/launches_image_item"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/launches_mission_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="5dp"
        android:fontFamily="@font/google_sans_regular"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        android:text="@string/starlink_2"
        app:layout_constraintStart_toEndOf="@+id/launches_image_item"
        app:layout_constraintTop_toBottomOf="@+id/launches_launch_text_view"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/launches_rocket_index_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="5dp"
        android:fontFamily="@font/google_sans_regular"
        android:textStyle="bold"
        android:text="@string/CCAES_SLC_40"
        android:textColor="@color/gray"
        android:textSize="12sp"
        app:layout_constraintStart_toEndOf="@+id/launches_image_item"
        app:layout_constraintTop_toBottomOf="@+id/launches_mission_text_view"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/launches_launch_date_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:fontFamily="@font/google_sans_regular"
        android:text="@string/date"
        android:textSize="12sp"
        android:textColor="@color/gray"
        app:layout_constraintStart_toEndOf="@+id/launches_image_item"
        app:layout_constraintTop_toBottomOf="@+id/launches_rocket_index_text_view"
        tools:ignore="MissingConstraints" />


</androidx.constraintlayout.widget.ConstraintLayout>