<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:elevation="2dp"
    android:translationZ="2dp"
    android:background="@drawable/round_drawable"
    android:padding="20dp"
    android:layout_marginStart="10dp"
    android:layout_marginEnd="10dp"
    android:layout_marginBottom="10dp"
    android:layout_marginTop="5dp">

    <ImageView
        android:id="@+id/rocket_item_image"
        android:layout_height="wrap_content"
        android:layout_width="115dp"
        android:src="@drawable/falconsat01"
        android:scaleType="fitCenter"
        android:adjustViewBounds="true"
        android:paddingRight="30dp"
        tools:ignore="MissingConstraints"
        />

    <TextView
        android:id="@+id/rocket_item_type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/google_sans_regular"
        android:paddingBottom="10dp"
        android:textSize="11dp"
        android:textStyle="bold"
        android:text="@string/rocket"
        android:textColor="@color/red"
        app:layout_constraintStart_toEndOf="@+id/rocket_item_image"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/rocket_item_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/google_sans_regular"
        android:paddingBottom="10dp"
        android:textSize="18sp"
        android:textStyle="bold"
        android:text="@string/rocket_name"
        app:layout_constraintStart_toEndOf="@+id/rocket_item_image"
        app:layout_constraintTop_toBottomOf="@+id/rocket_item_type" />

    <TextView
        android:id="@+id/rocket_item_status_indicator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/google_sans_regular"
        android:padding="2dp"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:text="@string/inactive"
        android:textColor="@color/white"
        android:textSize="9sp"
        android:textStyle="bold"
        android:background="@drawable/round_red_drawable"
        app:layout_constraintStart_toEndOf="@+id/rocket_item_image"
        app:layout_constraintTop_toBottomOf="@+id/rocket_item_name" />

</androidx.constraintlayout.widget.ConstraintLayout>